k8s-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-deployment
  namespace: netflix
spec:
  replicas: 3
  selector:
    matchLabels:
      app: netflix
  template:
    metadata:
      labels:
        app: netflix
    spec:
      containers:
        - name: netflix
          image: your-dockerhub-username/netflix-clone:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
