k8s-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-service
  namespace: netflix
spec:
  selector:
    app: netflix
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
